# WhatsApp-bot

./: .gitignore  pyproject.toml  tarea.py
src/my_proyect/: tarea.py
src/whatsapp_agent/: __main__.py  path.py
